css/style.css
html, body {
  -webkit-font-smoothing: antialiased;
  height: 100%;
  margin: 0;
}

body {
  background-color: rgb(255, 255, 255);
  font: 400 22px/1.38 Georgia;
  color: rgba(0,0,0,.8);
}

.big {
	font-size: 25px;
}

header { height: 100% !important; }

a {
	color: green;
	opacity: 1;
	-webkit-transition: color .25s ease-in-out;
	-moz-transition: color .25s ease-in-out;
	-o-transition: color .25s ease-in-out;
	transition: color .25s ease-in-out;
}
a:hover {
	opacity: .7;
}

p {
  margin-bottom: 1em;
}

em {
	background-color: #FEFDC8;
	color: #99A312;
  font-style: italic;
}

hr {
	margin-top: 2em;
	margin-bottom: 2em;
	border: 0;
	border-top: 1px solid #EEE;
	width: 80%;
}

.fa-ul {
	margin-bottom: 1.5em;
	margin-left: 25px;
}
.fa-ul li {
	margin-bottom: 10px;
}
.fa-li {
	font-size: .5em;
	padding-right: 15px;
	top: 9px;
}

.android {
  display: inline-block;
  float: left;
  margin-top: 1px;
  font: 400 4.2em/1.38 FontAwesome;
  color: rgb(255, 255, 255);
}
.android:hover {
	color: #99CC00;
  text-shadow: 0 1px 12px #99CC00;
}
.guide .fa-android:hover {
	color: #99CC00;
}

.button {
	
}
.button:hover {
	text-decoration: none;
}

.container {
  width: 700px;
}

.container .section-title {
  width: 500px;
  min-width: 500px;
  max-width: 500px;
}

.fa-star {
	font-size: .5em;
	vertical-align: 25%;
}
.fa-star:hover {
	color: #EABF58;
}
.fa-link, .grey {
	color: #999;
}

.section-awesome {
	position: absolute;
	top: -30px;
	left: 320px;
}
.fa-circle {
	color: #000;
}

.description-1 p:first-child {
	margin-bottom: .5em;
}

section#resources {
	margin-bottom: 220px;
}
section#article {
	margin-bottom: 250px;
}

.section#safari-hack {
	height: 0px;
	margin: 0;
	padding: 0;
}

.cta {
  width: 100%;
  margin: 0 auto;
  font: 3.28em/1.38 "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-align: center;
  color: #333333;
}

.cta-description {
  width: 100%;
  margin: 0 auto;
  line-height: 1.38;
  text-align: center;
  background-color: #f5f5f5;
  color: #333333;
  padding: 80px 0 0;
}
.cta-description span {
	font-size: 1.4em;
}

.description {
  width: 100%;
  margin: 50px auto 0;
  font-size: 1em;
  line-height: 1.38;
  text-align: center;
  color: #333333;
}

#footer-cta {
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 250px;
  background-color: #f5f5f5;
}

/*
.image {
  display: block;
  float: left;
  clear: both;
  width: 100%;
  height: auto;
  margin-top: 33px;
  overflow: hidden;
}*/

#inside_app,
#inside_app_store,
#inside_website {
  width: 700px;
  min-height: 500px;
  margin: 50px auto 0;
  padding-bottom: 5px;
  border: 1px solid rgb(221, 221, 221);
  border-radius: 1px;
  background-color: #ffffff;
  position: relative;
}

#inside_app .section-title,
#inside_app_store .section-title,
#inside_website .section-title {
  margin: 50px auto 0;
}

.ios {
  display: inline-block;
  float: left;
  margin: 1px 0 0 7.1428571428%;
  font: 400 4.2em/1.38 FontAwesome;
  color: rgb(255, 255, 255);
}
.ios:hover {
  color: #ddd;
  text-shadow: 0 1px 12px #ddd;
}

.guide .fa-apple:hover {
	color: #ddd;
}

.learn-cta {
  display: block;
  position: absolute;
  bottom: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  width: 80%;
  min-width: 700px;
  height: auto;
  margin: 0 auto;
}

.learn-cta ._text {
  width: 100%;
  margin: 0 auto;
  padding: 10px;
  border-width: 1px 1px 3px;
  border-color: rgb(255, 255, 255);
  border-style: solid;
  border-radius: 1px;
  font: normal 1em "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-align: center;
  color: #ffffff;
}
.learn-cta ._text:hover {
	background-color: #fff;
	color: rgb(0, 0, 0);
}

#main {
  float: left;
  clear: both;
  width: 100%;
  background-color: #ffffff;
}

#main .container {
  margin: 0 auto;
  padding-top: 80px;
  padding-bottom: 80px;
}

.main-cta {
  float: left;
  clear: both;
  width: 100%;
  height: 147px;
  margin-top: 25px;
}

.mantra {
  width: 81px;
  min-width: 500px;
  max-width: 500px;
  margin: 13px auto 0;
  font-size: 1em;
  line-height: 1.38;
  text-align: center;
  color: #ffffff;
}
.mantra a {
	color: #fff;
}
.mantra a:hover {
	opacity: 1;
	text-decoration: none;
	text-shadow: 0 1px 12px #FF0;
}

.oses {
  width: 308px;
  min-width: 308px;
  height: 146px;
  margin: 0 auto;
}
.oses a {
	color: #fff;
	opacity: 1;
}

#resources {
  float: left;
  clear: both;
  width: 100%;
  min-height: 750px;
  padding-top: 80px;
  padding-bottom: 120px;
  position: relative;
  border-bottom: 1px solid #d5d5d5;
  background-color: #ffffff;
}

#resources .container {
  min-height: 500px;
  margin: 0 auto;
}

#resources .section-title {
  float: left;
  margin-left: 14.2857142857%;
}

.section-title {
  color: #000000;
  line-height: 1.38;
  text-align: center;
  margin-bottom: 1em;
}
.section-hr {
	color: #666;
	text-align: center;
	margin-bottom: 1em;
}

#trias {
  float: left;
  clear: both;
  width: 100%;
  min-height: 500px;
  padding-top: 80px;
  padding-bottom: 80px;
  background-color: #f5f5f5;
}

#trias > div {
	padding: 0 50px 17px 50px;
}
#trias > div:first-child {
	margin-top: 0;
}
#trias img {
	border: 1px solid rgba(0,0,0,.3);
	margin-bottom: 0;
}

.toggle, .link {
  background-color: rgba(0, 0, 0, 0.3);
  -webkit-transition: color .25s ease-in-out;
  -moz-transition: color .25s ease-in-out;
  -o-transition: color .25s ease-in-out;
  transition: color .25s ease-in-out;
  color: #FFF;
  text-align: center;
  margin: 0 auto 33px;
  padding: 10px 0;
  letter-spacing: 0.01rem;
  font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 1.4;
  outline: 0;
  display: block;
  width: 100%;
  font-weight: normal;
}

.collapse {
	overflow: hidden;
}

.collapsing {
  opacity:.3;
  -webkit-transform-origin: top;
  transform-origin: top;
  -webkit-animation-fill-mode: forwards;  
  animation-fill-mode: forwards; 
  -webkit-transform: scale(1, 0);
  display: block; 
  transition: all 0.2s linear;
  -webkit-transition: all 0.2s linear;
}
/* ... */

